include/dss_capi.h

    DSS_CAPI_DLL int32_t Loads_Get_Class_(void);
    /*
    Name of a loadshape with both Mult and Qmult, for CVR factors as a function of time.
    */
    DSS_CAPI_DLL char* Loads_Get_CVRcurve(void);
    /*
    Percent reduction in Q for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRvars(void);
    /*
    Percent reduction in P for percent reduction in V. Must be used with LoadModelCVR.
    */
    DSS_CAPI_DLL double Loads_Get_CVRwatts(void);
    /*
    Name of the loadshape for a daily load profile.
    */
    DSS_CAPI_DLL char* Loads_Get_daily(void);
    /*
    Name of the loadshape for a duty cycle simulation.
    */
    DSS_CAPI_DLL char* Loads_Get_duty(void);
    /*
    Name of the growthshape curve for yearly load growth factors.
    */
    DSS_CAPI_DLL char* Loads_Get_Growth(void);
    /*
    Delta loads are connected line-to-line.
    */
    DSS_CAPI_DLL uint16_t Loads_Get_IsDelta(void);
    /*
    Base load kva. Also defined kw and kvar or pf input, or load allocation by kwh or xfkva.
    */
    DSS_CAPI_DLL double Loads_Get_kva(void);
    /*
    kwh billed for this period. Can be used with Cfactor for load allocation.
    */
    DSS_CAPI_DLL double Loads_Get_kwh(void);
    /*
    Length of kwh billing period for average demand calculation. Default 30.
    */
    DSS_CAPI_DLL double Loads_Get_kwhdays(void);
    /*
    The Load Model defines variation of P and Q with voltage.
    */
    DSS_CAPI_DLL int32_t Loads_Get_Model(void);
    /*
    Number of customers in this load, defaults to one.
    */
    DSS_CAPI_DLL int32_t Loads_Get_NumCust(void);
    /*
    Average percent of nominal load in Monte Carlo studies; only if no loadshape defined for this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctMean(void);
    /*
    Percent standard deviation for Monte Carlo load studies; if there is no loadshape assigned to this load.
    */
    DSS_CAPI_DLL double Loads_Get_PctStdDev(void);
    /*
    Neutral resistance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Rneut(void);
    /*
    Name of harmonic current spectrrum shape.
    */
    DSS_CAPI_DLL char* Loads_Get_Spectrum(void);
    /*
    Response to load multipliers: Fixed (growth only), Exempt (no LD curve), Variable (all).
    */
    DSS_CAPI_DLL int32_t Loads_Get_Status(void);
    /*
    Maximum per-unit voltage to use the load model. Above this, constant Z applies.
    */
    DSS_CAPI_DLL double Loads_Get_Vmaxpu(void);
    /*
    Minimum voltage for unserved energy (UE) evaluation.
    */
    DSS_CAPI_DLL double Loads_Get_Vminemerg(void);
    /*
    Minimum voltage for energy exceeding normal (EEN) evaluations.
    */
    DSS_CAPI_DLL double Loads_Get_Vminnorm(void);
    /*
    Minimum voltage to apply the load model. Below this, constant Z is used.
    */
    DSS_CAPI_DLL double Loads_Get_Vminpu(void);
    /*
    Rated service transformer kVA for load allocation, using AllocationFactor. Affects kW, kvar, and pf.
    */
    DSS_CAPI_DLL double Loads_Get_xfkVA(void);
    /*
    Neutral reactance for wye-connected loads.
    */
    DSS_CAPI_DLL double Loads_Get_Xneut(void);
    /*
    Name of yearly duration loadshape
    */
    DSS_CAPI_DLL char* Loads_Get_Yearly(void);
    DSS_CAPI_DLL void Loads_Set_AllocationFactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Cfactor(double Value);
    DSS_CAPI_DLL void Loads_Set_Class_(int32_t Value);
    DSS_CAPI_DLL void Loads_Set_CVRcurve(char* Value);
    DSS_CAPI_DLL void Loads_Set_CVRvars(double Value);
    DSS_CAPI_DLL void Loads_Set_CVRwatts(double Value);
    DSS_CAPI_DLL void Loads_Set_daily(char* Value);
    DSS_CAPI_DLL void Loads_Set_duty(char* Value);
    DSS_CAPI_DLL void Loads_Set_Growth(char* Value);
    DSS_CAPI_DLL void Loads_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL void Loads_Set_kva(double Value);
    DSS_CAPI_DLL void Loads_Set_kwh(double Value);
    DSS_CAPI_DLL void Loads_Set_kwhdays(double Value);
    DSS_CAPI_DLL void Loads_Set_Model(int32_t Value);